      __parent__ pointer to the Aq-wrapper and not the actual object. Also
      prevented the getMainGlobals script to fail if not content-type header
      is set.

    - AfterTransitionEvent now passes along the new status of the object, just
      as StateChangeInfo passes on the new status to after-transition scripts.
      (http://www.zope.org/Collectors/CMF/490)


CMF 2.1.0 (2007/08/08)

  New Features

    - PortalFolder: Enabled 'Components' ZMI tab.
      This GenericSetup tab allows to inspect and edit component registrations. 

  Bug Fixes

    - Fixed all componentregistry.xml files to use plain object paths and strip
      and slashes. GenericSetup does only support registering objects which are
      in the site root.

    - Allow email addresses with all-numeric domain names. The RFCs do not
      support them but they do exist.  
      (http://dev.plone.org/plone/ticket/6773)


CMF 2.1.0-beta2 (2007/07/12)

  New Features

    - CMFCore.exportimport.skins: Added the ability to remove whole skin
      selections using a GS profile.
      (http://www.zope.org/Collectors/CMF/479)

    - Workflow definition instances now have a description field
      (http://www.zope.org/Collectors/CMF/480)

  Bug Fixes

    - UndoTool: Fixed 'listUndoableTransactionsFor'.
      The required 'object' argument is now respected. This doesn't change the
      behavior as long as 'object' is the site root object.

    - CMFCore.TypesTool: Corrected method signature of all_meta_types to have
      an interface keyword argument, as per the underlying OFS.ObjectManager
      interface declaration.

    - SkinnableObjectManager: Changed the way skins are set up.
      Acquisition wrapping no longer triggers 'setupCurrentSkin'. This is now
      done on publishing traversal after the BeforeTraverseEvent triggers
      'setSite'. This fix replaces a temporary hack introduced in 2.1.0-beta,
      making sure ISkinsTool is looked up after setting the site.
